--- a/src/ui/messenger/ConvoHistory/ConvoHistory.css
+++ b/src/ui/messenger/ConvoHistory/ConvoHistory.css
@@ -9,7 +9,7 @@
   /* Для подсвечивания сообщения мы создаем ::after элемент, растянутый на 200vw и сдвинутый на 100vw, */
   /* чтобы подсветился фон по всей ширине истории, но по какой-то причине этот absolute ::after элемент */
   /* создает горизонтальный скролл... и overflow-x: hidden фиксит его */
-  overflow: hidden auto;
+  overflow: hidden overlay;
 }
 
 .ConvoHistory__content {
