--- a/src/ui/ui/Select/Select.css
+++ b/src/ui/ui/Select/Select.css
@@ -49,7 +49,7 @@
   position: absolute;
   width: 100%;
   max-height: 150px;
-  overflow: auto;
+  overflow: overlay;
   z-index: 1;
   background: var(--vkui--color_background_contrast_themed);
   border: 1px solid var(--vkui--color_field_border_alpha);
